<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_background"
    android:gravity="center">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_permissions"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enable_the_install_unknown_apps_permission_in_your_settings"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/button_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"/>
    </LinearLayout>
</LinearLayout>
